changed to no game rules

--- a/edu-pixelboard-disabled-game-rules/main_server/Pages/Shared/_Layout.cshtml
+++ b/edu-pixelboard-disabled-game-rules/main_server/Pages/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
             class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3 @(isLocalhost ? "dev-mode" : "")">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Board</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Player">Player</a>
                 <a class="navbar-brand" asp-area="" asp-page="/Admin">Admin</a>
             </div>
         </nav>
